/// Copyright 2025 North Pole Security, Inc.
///
/// Licensed under the Apache License, Version 2.0 (the "License");
/// you may not use this file except in compliance with the License.
/// You may obtain a copy of the License at
///
///     http://www.apache.org/licenses/LICENSE-2.0
///
/// Unless required by applicable law or agreed to in writing, software
/// distributed under the License is distributed on an "AS IS" BASIS,
/// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
/// See the License for the specific language governing permissions and
/// limitations under the License.

syntax = "proto3";

package santa.cel.v1;

import "google/protobuf/timestamp.proto";

enum ReturnValue {
  UNSPECIFIED = 0;

  // Allow the process to execute.
  ALLOWLIST = 1;

  // Allow the process to execute and if the client has transitive allowlisting
  // enabled, any files created by this binary will be locally allowlisted.
  ALLOWLIST_COMPILER = 2;

  // Block the process from executing.
  BLOCKLIST = 3;

  // Block the process from executing and do not show GUI notifications to the
  // user. This should be used sparingly as the behavior of applications being
  // silently blocked can be very confusing for users.
  SILENT_BLOCKLIST = 4;
}

// The fields in this message provided to CEL programs.
message ExecutionContext {
  // The file being executed. All the fields in this message are based on the
  // content of the file, so programs that only use fields in this message can
  // be cached.
  ExecutableFile target = 1;

  // The command-line arguments being passed to the new process.
  // Using this field will prevent the result from being cached.
  repeated string args = 2;

  // The environment variables being passed to the new process.
  // Using this field will prevent the result from being cached.
  map<string, string> envs = 3;
}

// The fields in this message are provided to the CEL program and are static,
// related only to the content of the executable file. The fields inside this
// message will always be the same as long as the content of the file doesn't
// change, which allows Santa to cache the results of CEL expressions that only
// use fields from this message.
message ExecutableFile {
  google.protobuf.Timestamp signing_timestamp = 1;
}
